# noughts-N-crosses

./: .ci.yml  .pylintrc  Dockerfile  README.md  ci.yaml  pyproject.toml  requirements.txt
app/: .ci.yml  main.py
tests/: test_runner.py
