[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "noughts-N-crosses"
version = "1.0.0"
authors = [
    { name = "Aadam Yiadom-Boakye", email = "aadam.y.boakye@gmail.com" }
]
description = "A simple Tkinter-based Noughts and Crosses game."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Topic :: Games/Entertainment :: Board Games",
]

dependencies = [
    "tk",
    "pyyaml ~=6.0",
    "pyjwt ~=2.0.0",
    "pytest ~=8.0.0",
    "pylint ~=3.0.0",
    "black ~=24.0.0"
]

[project.optional-dependencies]
dev = [
    "autopep8 ~=1.7.0",
    "pytest-cov ~=4.0.0",
    "isort ~=5.12.0",
    "flake8 ~=7.0.0"
]

[project.urls]
"Homepage" = "https://github.com/AadamYB/noughts-N-crosses"

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"